--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" class="bg-dark" type="image/svg+xml" href="/public/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Purchese Order Create By Prachi</title>
   </head>
